tests/build/fail/widget_new/unknown_special_value_in_when.stderr
error: unknown value `required!`
 --> $DIR/unknown_special_value_in_when.rs:8:22
  |
8 |             margin = required!;
  |                      ^^^^^^^^

error: unknown value `foo!`
  --> $DIR/unknown_special_value_in_when.rs:15:22
   |
15 |             margin = foo!;
   |                      ^^^
